--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
         <span>L</span>
         <span>O</span>
     </div>
+    <div class="greetings">
+
+        <span>M</span>
+        <span>E</span>
+        <span>L</span>
+        <span>I</span>
+        
+    </div>
 
     <div class="greetings">
         <span>S</span>
